# SlicerMedicalReportGrading

./: CMakeLists.txt  DESCRIPTION  Readme.md
examples/: reports.json
showImageReports/: CMakeLists.txt  showImageReports.py
showImageReports/Resources/UI/: showImageReports.ui
